--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body{
   font-family: segoe ui;
 }
 
-@keyframes zoom {
+/* @keyframes zoom {
   0% {
     transform: scale(1);
   }
@@ -20,4 +20,4 @@ body{
 
 .animate-zoom {
   animation: zoom 20s infinite alternate ease-in-out;
-}
+} */
